[package]
name = "abstract-subscription-app"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
boot = ["export", "dep:boot-core", "dep:abstract-boot"]
schema = ["abstract-app/schema"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
semver = { workspace = true }

abstract-sdk = { workspace = true }
abstract-app = { workspace = true }
abstract-core = { workspace = true }
boot-core = { workspace = true, optional = true }

abstract-boot = { workspace = true, optional = true }

[dev-dependencies]
cw20 = { workspace = true }
subscription = { path = ".", features = ["boot"], package = "abstract-subscription-app" }
tokio = { workspace = true }
semver = { workspace = true }
anyhow = { workspace = true }
speculoos = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { workspace = true }
abstract-sdk = { workspace = true, features = ["test-utils"] }
boot-cw-plus = { workspace = true }
